<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile"
                style="@style/AppTheme.TitleTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/profile"
                app:layout_constraintEnd_toStartOf="@id/profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile" />

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@id/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/profile" />


            <EditText
                android:id="@+id/name"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="128"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <EditText
                android:id="@+id/phone_number"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:focusable="false"
                android:hint="@string/hint_phone_number"
                android:inputType="none"
                android:maxLength="128"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/address"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:hint="@string/hint_addresss"
                android:inputType="text"
                android:maxLength="128"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <EditText
                android:id="@+id/home_number"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:hint="@string/hint_home"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/flat_no"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:hint="@string/hint_flat"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_number" />

            <EditText
                android:id="@+id/password"
                style="@style/AppTheme.RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:drawableEnd="@android:drawable/ic_menu_edit"
                android:text="**********"
                android:inputType="none"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flat_no"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background_rounded"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/my_bonuses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_bonus"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="Мои бонусы 900 баллов"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_button" />


            <Button
                android:id="@+id/order_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/backgroun_rounded_edittext"
                android:text="@string/order_history"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_bonuses" />

            <TextView
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/sign_out"
                android:textAllCaps="true"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/order_story" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <FrameLayout
        android:id="@+id/progress"
        android:visibility="gone"
        android:background="@color/transparent_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
</FrameLayout>